[gd_scene load_steps=23 format=2]

[ext_resource path="res://Icon/UITexture/Icon_Skull.png" type="Texture" id=1]
[ext_resource path="res://Icon/UITexture/Item5.png" type="Texture" id=2]
[ext_resource path="res://Font/appleFonts.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/GamePanel.gd" type="Script" id=4]
[ext_resource path="res://Icon/UITexture/Item2.png" type="Texture" id=5]
[ext_resource path="res://Icon/UITexture/Item3.png" type="Texture" id=6]
[ext_resource path="res://Icon/UITexture/Icon_SquareStraight.png" type="Texture" id=7]
[ext_resource path="res://Icon/UITexture/Icon_Hanger.png" type="Texture" id=8]
[ext_resource path="res://Icon/UITexture/Icon_Write.png" type="Texture" id=9]
[ext_resource path="res://Icon/UITexture/DialogView_4.png" type="Texture" id=10]
[ext_resource path="res://Scene/ExtendPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Icon/UITexture/Icon_Trash.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=10]
radius = 72.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 922, 813 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1528, 346 )

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 10 )
region_rect = Rect2( 9, 0, 103, 110 )
margin_left = 10.0
margin_right = 12.0
margin_top = 10.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 710, 175 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 175, 180 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1528, 346 )
margin_left = 48.0
margin_right = 40.0
margin_top = 13.0
margin_bottom = 8.0

[node name="GamePanel" type="Panel"]
self_modulate = Color( 0.976471, 0, 1, 0.490196 )
margin_right = 936.0
margin_bottom = 544.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossModel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 376.0
margin_top = 24.0
margin_right = 560.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossModelIcon" type="TextureRect" parent="BossModel"]
anchor_right = 1.0
anchor_bottom = 0.776
margin_bottom = 0.00799561
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossModelName" type="Label" parent="BossModel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 149.0
custom_fonts/font = SubResource( 1 )
text = "999999"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HurtBox" type="Area2D" parent="BossModel"]
position = Vector2( 96, 72 )
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossModel/HurtBox"]
visible = false
shape = SubResource( 10 )

[node name="InfoShowPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 192.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleImg" type="TextureRect" parent="InfoShowPanel"]
margin_top = -16.0
margin_right = 112.0
margin_bottom = 8.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="InfoShowPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 64.0
margin_right = -8.0
margin_bottom = -64.0
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTip" type="Label" parent="InfoShowPanel"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.071
anchor_top = 0.045
anchor_right = 0.929
anchor_bottom = 0.318
margin_left = 0.0479999
margin_top = 0.0799999
margin_right = -0.0480042
margin_bottom = 0.0319977
text = "Score"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionPanel" type="Panel" parent="."]
margin_left = 776.0
margin_top = 8.0
margin_right = 928.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionTip" type="Label" parent="QuestionPanel"]
anchor_left = 0.053
anchor_top = 0.071
anchor_right = 0.947
anchor_bottom = 0.571
margin_left = -0.0560007
margin_top = 0.0479999
margin_right = 0.0559998
margin_bottom = 0.0479965
custom_fonts/font = SubResource( 8 )
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionTipValue" type="Label" parent="QuestionPanel"]
anchor_left = 0.053
anchor_top = 0.643
anchor_right = 0.947
anchor_bottom = 0.929
margin_left = -0.0560007
margin_top = -0.0159988
margin_right = 0.0559998
margin_bottom = -0.0480042
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyboardPanel" type="Panel" parent="."]
self_modulate = Color( 0.866667, 0.85098, 0.85098, 1 )
margin_left = 104.0
margin_top = 280.0
margin_right = 832.0
margin_bottom = 536.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSortErrorUI" type="YSort" parent="KeyboardPanel"]

[node name="Click" type="Panel" parent="KeyboardPanel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 608.0
margin_top = 16.0
margin_right = 720.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrderAttackBtn" type="Button" parent="KeyboardPanel/Click"]
margin_left = 8.0
margin_top = 96.0
margin_right = 104.0
margin_bottom = 144.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrderSendBtn" type="Button" parent="KeyboardPanel/Click"]
margin_left = 8.0
margin_top = 168.0
margin_right = 104.0
margin_bottom = 216.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Subbmit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OderFileBtn" type="Button" parent="KeyboardPanel/Click"]
margin_left = 32.0
margin_top = 24.0
margin_right = 80.0
margin_bottom = 72.0
rect_min_size = Vector2( 48, 48 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OderFileBtnImg" type="TextureRect" parent="KeyboardPanel/Click/OderFileBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_right = 8.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileName" type="Label" parent="KeyboardPanel/Click/OderFileBtn"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 0.937
margin_bottom = 0.0240021
text = "File.txt"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" type="Panel" parent="KeyboardPanel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 600.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnowledgeContainer" type="ScrollContainer" parent="KeyboardPanel/Keyboard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 24.0
margin_right = -32.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="GridContainer" parent="KeyboardPanel/Keyboard/KnowledgeContainer"]
margin_right = 534.0
margin_bottom = 208.0
custom_constants/vseparation = 32
custom_constants/hseparation = 33
columns = 7

[node name="Oder1" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "ls"
clip_text = true

[node name="Oder2" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 81.0
margin_right = 129.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "cd"
clip_text = true

[node name="Oder3" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 162.0
margin_right = 210.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "echo"
clip_text = true

[node name="Oder4" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 243.0
margin_right = 291.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "mv"
clip_text = true

[node name="Oder5" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 324.0
margin_right = 372.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "cp"
clip_text = true

[node name="Oder6" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 405.0
margin_right = 453.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "cat"
clip_text = true

[node name="Oder7" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 486.0
margin_right = 534.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "tail"
clip_text = true

[node name="Oder8" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 80.0
margin_right = 48.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "kill"
clip_text = true

[node name="Oder9" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 81.0
margin_top = 80.0
margin_right = 129.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "df"
clip_text = true

[node name="Oder10" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 162.0
margin_top = 80.0
margin_right = 210.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "free"
clip_text = true

[node name="Oder11" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 243.0
margin_top = 80.0
margin_right = 291.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "top"
clip_text = true

[node name="Oder12" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 324.0
margin_top = 80.0
margin_right = 372.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "ps"
clip_text = true

[node name="Oder13" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 405.0
margin_top = 80.0
margin_right = 453.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "grep"
clip_text = true

[node name="Oder14" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 486.0
margin_top = 80.0
margin_right = 534.0
margin_bottom = 128.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "mkdir"
clip_text = true

[node name="Oder15" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_top = 160.0
margin_right = 48.0
margin_bottom = 208.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "lsblk"
clip_text = true

[node name="Oder16" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 81.0
margin_top = 160.0
margin_right = 129.0
margin_bottom = 208.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "ping"
clip_text = true

[node name="Oder17" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 162.0
margin_top = 160.0
margin_right = 210.0
margin_bottom = 208.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "telnet"
clip_text = true

[node name="Oder18" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 243.0
margin_top = 160.0
margin_right = 291.0
margin_bottom = 208.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "ifconfig"
clip_text = true

[node name="Oder19" type="Button" parent="KeyboardPanel/Keyboard/KnowledgeContainer/Container"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 324.0
margin_top = 160.0
margin_right = 372.0
margin_bottom = 208.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "tar"
clip_text = true

[node name="ShowOrder" type="Panel" parent="KeyboardPanel"]
margin_left = 128.0
margin_top = -40.0
margin_right = 600.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrderLabel" type="Label" parent="KeyboardPanel/ShowOrder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSortExtendUI" type="YSort" parent="KeyboardPanel"]
position = Vector2( -104, -280 )

[node name="ExtendBtn" type="Button" parent="KeyboardPanel/YSortExtendUI"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 622.0
margin_top = 464.0
margin_right = 670.0
margin_bottom = 512.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "..."
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelBtn" type="Button" parent="KeyboardPanel/YSortExtendUI"]
modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 541.0
margin_top = 464.0
margin_right = 589.0
margin_bottom = 512.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelImg" type="TextureRect" parent="KeyboardPanel/YSortExtendUI/DelBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 8.0
margin_right = -5.0
margin_bottom = -8.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtendPanel" parent="KeyboardPanel/YSortExtendUI" instance=ExtResource( 11 )]
visible = false
margin_left = 600.0
margin_top = 208.0
margin_right = 792.0
margin_bottom = 464.0

[node name="BtnPlayer" type="AudioStreamPlayer" parent="KeyboardPanel"]

[connection signal="area_shape_entered" from="BossModel/HurtBox" to="." method="_on_HurtBox_area_shape_entered"]
[connection signal="pressed" from="KeyboardPanel/Click/OrderAttackBtn" to="." method="_on_OrderAttackBtn_pressed"]
[connection signal="pressed" from="KeyboardPanel/Click/OrderSendBtn" to="." method="_on_OrderSendBtn_pressed"]
[connection signal="pressed" from="KeyboardPanel/Click/OderFileBtn" to="." method="_on_OderFileBtn_pressed"]
[connection signal="pressed" from="KeyboardPanel/YSortExtendUI/ExtendBtn" to="." method="_on_ExtendBtn_pressed"]
[connection signal="pressed" from="KeyboardPanel/YSortExtendUI/DelBtn" to="." method="_on_DelBtn_pressed"]

[editable path="KeyboardPanel/YSortExtendUI/ExtendPanel"]
